--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@pixi/graphics-extras": "^5.3.3",
     "@pixi/sound": "^4.2.0",
     "@tweenjs/tween.js": "^18.6.4",
+    "@types/d3": "^7.4.0",
+    "d3": "^7.6.1",
     "intersects": "^2.7.2",
     "lodash": "^4.17.20",
     "pixi-filters": "^3.1.1",
