--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "homepage": "https://github.com/Orbonis/dungeon-builder",
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/intersects": "^2.5.0",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.10",
@@ -41,6 +42,8 @@
     "@tweenjs/tween.js": "^18.6.4",
     "@types/d3": "^7.4.0",
     "d3": "^7.6.1",
+    "file-dialog": "^0.0.8",
+    "file-saver": "^2.0.5",
     "intersects": "^2.7.2",
     "lodash": "^4.17.20",
     "pixi-filters": "^3.1.1",
@@ -49,6 +52,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "search-params": "^3.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "typed-signals": "^2.2.0",
     "webfontloader": "^1.6.28"
   }
